--- a/fighter/style.css
+++ b/fighter/style.css
@@ -1,12 +1,12 @@
 .arena{
-    width: 800px; 
-    height:700px;
+    width: 50vw; 
+    min-width: 50vw;
+    max-width: 50vw;
     border:3px solid red;
     margin: 2px;
-    min-height: 700px;
-    min-width: 800px;
-    max-height: 700px;
-    max-width: 800px;
+    height:62vh;
+    min-height: 62vh;
+    max-height: 62vh;
     
 }
 
