--- a/fighter/style.css
+++ b/fighter/style.css
@@ -10,6 +10,16 @@
     
 }
 
+.arena_img{
+    width: 50vw; 
+    min-width: 50vw;
+    max-width: 50vw;
+    margin: 2px;
+    height:62vh;
+    min-height: 62vh;
+    max-height: 62vh;
+}
+
 .arena-container{
     display: flex;
   justify-content: center;
